--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,35 @@ body {
   height: 100%;
 }
 
+a {
+  color: #4e4a46;
+  text-decoration: none;
+}
+a:hover,
+a:focus {
+  color: #c94e50;
+}
+main {
+  height: 100%;
+  padding: 3em 2em;
+  text-align: center;
+  background: #171717;
+  overflow: auto;
+}
+h1 {
+  font-weight: 600;
+  font-size: 3.75em;
+}
+h2 {
+  font-weight: 200;
+  font-size: 2em;
+}
+
 .App {
   text-align: center;
+  height: 100%;
+  color: #fffce1;
+  font-family: "Raleway", Arial, sans-serif;
 }
 
 .App-logo {
