DYNO-31: Create the UI for displaying shop order operation scheduling
Added page for displaying shop order. Added Menu bar and search bar skeletons

--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -5,7 +5,7 @@
   width: 36px;
   height: 30px;
   left: 36px;
-  top: 36px;
+  top: 18px;
 }
 .right .bm-burger-button {
   left: initial;
@@ -19,6 +19,7 @@
 }
 .bm-menu {
   background: #444;
+  text-align: center;
 }
 .bm-menu a {
   color: #b8b7ad;
